--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                     </p>
                 </div>
                 <div class="col-sm-4 text-right">
-                    <p>Designed with special care by Divy <a href="http://demo.curlythemes.com/" target="_blank"><abbr title="Premium WordPress Themes &amp; Plugins">Curly Themes</abbr></a></p>
+                    <p>Designed with special care by<a href="http://softles.ml" target="_blank"><abbr title="Premium WordPress Themes &amp; Plugins">Softles</abbr></a></p>
                 </div>
             </div>
         </div>
