--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="css/jquery.fs.boxer.css" rel="stylesheet">
     <link href="css/jquery.fs.wallpaper.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet" media="screen">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
     <script type="text/javascript">
         stLight.options({
@@ -64,21 +64,42 @@
         </nav>
     </header>
     <article id="content">
-        <section id="home" class="crossfade pb-pattern o-lines-light" data-crossfade-start="images/splash.jpg" data-crossfade-end="images/splash-blur.jpg">
-            <div id="splash" class="midway-horizontal midway-vertical midway animated">
-                <h1>Divaz those who rule the ambience with their own way of aggerendized talent <small>Be Bold. Be a Diva</small></h1>
-                <a href="#petition" class="btn btn-primary btn-lg smooth-scroll hidden-xs">Support Divaz Now!</a>
-            </div>
-            <div id="counter" class="midway-horizontal midway animated">
-                <!--<div>With <strong class="counter" data-number="117567">0</strong> Supporters</div>
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100">
-                        <span class="sr-only">99% Complete</span>
-                    </div>
+
+
+
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="images/splash.jpg" alt="First slide">
                 </div>
-                <div class="text-right">We Still Need <strong class="counter" data-number="82433">0</strong> Supporters</div>-->
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="images/splash.jpg" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="images/splash.jpg" alt="Third slide">
+                </div>
             </div>
-        </section>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
+
+
+
+
+
+
         <section id="petition">
             <div class="container">
                 <div class="row content-padding-lg">
@@ -332,7 +353,9 @@
             </div>
         </div>
     </footer>
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/waypoints.min.js"></script>
