--- a/All Divaz.html
+++ b/All Divaz.html
@@ -7,9 +7,11 @@
     <meta charset="utf-8">
     <title>Enterprising Divaz - Official Website</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="images/favicon.ico" rel="icon" type="image/png">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic%7CRoboto:400,300,500,700,900%7CCutive+Mono" rel="stylesheet" type="text/css">
+   
+   
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/pe-icon-7-stroke.css" rel="stylesheet">
@@ -17,19 +19,11 @@
     <link href="css/jquery.fs.boxer.css" rel="stylesheet">
     <link href="css/jquery.fs.wallpaper.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet" media="screen">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
-    <script type="text/javascript">
-        stLight.options({
-            publisher: "eff543fa-3d9c-49e1-a64e-cb4acbfb2ebe",
-            doNotHash: false,
-            doNotCopy: false,
-            hashAddressBar: false
-        });
-    </script>
+   
 </head>
 
 <body data-spy="scroll" data-target="#main-nav" data-offset="60" class="one-page">
+
     <header id="header" role="banner">
         <nav role="navigation" id="main-nav">
             <div class="container">
@@ -42,15 +36,23 @@
                             <li class="menu-item active">
                                 <a href="index.html"><i class="fa fa-home"></i></a>
                             </li>
-
                             <li class="menu-item">
-                                <a href="gallery.html">Gallery</a>
+                                <a href="index.html#aboutUS" >Abous Us</a>
                             </li>
 
                             <li class="menu-item">
-                                <a href="All Divaz.html">Member Divaz</a>
+                                <a href="index.html#news" >Events - Updates</a>
                             </li>
 
+                            <li class="menu-item">
+                                <a href="index.html#ContactUs">Contact Us</a>
+                            </li>
+                            <li class="menu-item">
+                                    <a href="gallery.html">Gallery</a>
+                                </li>
+                                <li class="menu-item">
+                                        <a href="All Divaz.html" >Member Divaz</a>
+                                    </li>
                         </ul>
                     </div>
                 </div>
@@ -197,9 +199,8 @@
             </div>
         </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    
+   
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/waypoints.min.js"></script>
