--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="images/favicon.ico" rel="icon" type="image/png">
-    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic%7CRoboto:400,300,500,700,900%7CCutive+Mono" rel="stylesheet" type="text/css">
+
+
+    
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/pe-icon-7-stroke.css" rel="stylesheet">
@@ -17,31 +19,41 @@
     <title>Masonry Layout con CSS Grid</title>
 </head>
 <body data-spy="scroll" data-target="#main-nav" data-offset="60" class="one-page">
-        <header id="header" role="banner">
-                <nav role="navigation" id="main-nav">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-xs-12">
-                                <a href="#home" id="logo" class="smooth-scroll"><img src="images/logo.png" width="125" height="25" alt="" /></a>
-                                <label class="toggle-nav-label visible-xs" for="toggle-main-nav"><i class="fa fa-bars fa-lg"></i></label>
-                                <input type="checkbox" id="toggle-main-nav" class="toggle-nav-input">
-                                <ul id="main-menu" class="menu nav">
-                                    <li class="menu-item active">
-                                        <a href="index.html"><i class="fa fa-home"></i></a>
-                                    </li>
+    <header id="header" role="banner">
+        <nav role="navigation" id="main-nav">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xs-12">
+                        <a href="#home" id="logo" class="smooth-scroll"><img src="images/logo.png" width="125" height="25" alt="" /></a>
+                        <label class="toggle-nav-label visible-xs" for="toggle-main-nav"><i class="fa fa-bars fa-lg"></i></label>
+                        <input type="checkbox" id="toggle-main-nav" class="toggle-nav-input">
+                        <ul id="main-menu" class="menu nav">
+                            <li class="menu-item active">
+                                <a href="index.html"><i class="fa fa-home"></i></a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="index.html#aboutUS" class="smooth-scroll">Abous Us</a>
+                            </li>
 
-                                    <li class="menu-item">
-                                            <a href="gallery.html">Gallery</a>
-                                        </li>
-                                        <li class="menu-item">
-                                                <a href="All Divaz.html" >Member Divaz</a>
-                                            </li>
-                                </ul>
-                            </div>
-                        </div>
+                            <li class="menu-item">
+                                <a href="index.html#news" class="smooth-scroll">Events - Updates</a>
+                            </li>
+
+                            <li class="menu-item">
+                                <a href="index.html#ContactUs" class="smooth-scroll">Contact Us</a>
+                            </li>
+                            <li class="menu-item">
+                                    <a href="gallery.html">Gallery</a>
+                                </li>
+                                <li class="menu-item">
+                                        <a href="All Divaz.html" >Member Divaz</a>
+                                    </li>
+                        </ul>
                     </div>
-                </nav>
-            </header>
+                </div>
+            </div>
+        </nav>
+    </header>
     <p><br></p>
     <h1>Event 1</h1>
 
